--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ after_success:
   - docker build -t rezaei/multi-server ./server
   - docker build -t rezaei/multi-worker ./worker
   #Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID"
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # take image and push to docker hub
+  - docker push rezaei/multi-client
+  - docker push rezaei/multi-nginx
+  - docker push rezaei/multi-server
+  - docker push rezaei/multi-worker
